--- a/RecipeMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeMVC/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img width="120" height="60" src="~/Images/pictrue.png" style="position:relative; margin-left:200px"></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Recipes" asp-action="IndexImage"><img width="120" height="60" src="~/Images/pictrue.png" style="position:relative; margin-left:200px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
