--- a/RecipeMVC/Views/Shared/_LoginPartial.cshtml
+++ b/RecipeMVC/Views/Shared/_LoginPartial.cshtml
@@ -11,9 +11,9 @@
             /*<li class="nav-item">
                 <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserDetails.GetName(User)!</a>
             </li>*/
-            <li class="nav-item dropdown show" style="margin-right:200px">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserDetails.GetName(User)</a>
-                <div class="dropdown-menu show">
+            <li class="nav-item dropdown show" >
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserDetails.GetName(User)</a>
+                <div class="dropdown-menu">
                     <a class="dropdown-item" href="#">Profile</a>
                     <a class="dropdown-item" href="#">Add recipe</a>
                     <a class="dropdown-item" href="#">Favourite recipes</a>
@@ -23,11 +23,12 @@
                     </form>
                 </div>
             </li>
-           /* <li class="nav-item" style="margin-right:30px">
-                <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-                </form>
-            </li>*/
+            <img width="100" height="50" src="~/Images/user2.svg" />
+            /* <li class="nav-item" style="margin-right:30px">
+                 <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                     <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                 </form>
+             </li>*/
         }
         else
         {
