--- a/RecipeMVC/Views/Recipes/RecImgDetails.cshtml
+++ b/RecipeMVC/Views/Recipes/RecImgDetails.cshtml
@@ -68,8 +68,7 @@
                 <div class="row">
                     <img width="35" height="35" src="~/Images/oven.png" style="margin-left: 10px " />
                     <p class="font-weight-bold" style=" padding: 4px 0px 4px 4px">Cook time:</p>
-                    <p style="        padding: 4px 0px 4px 4px
-">@Html.DisplayFor(model => model.Recipe.BakingTime)'</p>
+                    <p style="padding: 4px 0px 4px 4px">@Html.DisplayFor(model => model.Recipe.BakingTime)'</p>
                 </div>
                 <div class="row">
                     <img width="35" height="35" src="~/Images/cutlery.png" style="margin-left:10px" />
