--- a/RecipeMVC/Views/Shared/_LoginPartial.cshtml
+++ b/RecipeMVC/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,8 @@
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserDetails.GetName(User)</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="#">Profile</a>
-                    <a class="dropdown-item" href="#">Add recipe</a>
+                    <a class="dropdown-item" asp-controller="Recipes" asp-action="Create">Add recipe</a>
+                    <a class="dropdown-item" href="#">My Recipes</a>
                     <a class="dropdown-item" href="#">Favourite recipes</a>
                     <div class="dropdown-divider"></div>
                     <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
