--- a/RecipeMVC/Views/Recipes/Create.cshtml
+++ b/RecipeMVC/Views/Recipes/Create.cshtml
@@ -88,8 +88,7 @@
                     <div class="col-md-6">
                         <a asp-action="IndexImage" class="btn btn-outline-secondary">Back</a>
                     </div>
-                    <div class="col-md-6" style="justify-items:right">
-                        <!--DE CE NU MERGE AICI?-->
+                    <div class="col-md-6">
                         <input type="submit" value="Add recipe" class="btn btn-outline-primary" style="float:right" />
                     </div>
                 </div>
