--- a/RecipeMVC/Views/Shared/_LoginPartial.cshtml
+++ b/RecipeMVC/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,7 @@
                     <a class="dropdown-item" href="#">Profile</a>
                     <a class="dropdown-item" asp-controller="Recipes" asp-action="Create">Add recipe</a>
                     <a class="dropdown-item" asp-controller="Recipes" asp-action="GetUserRecipes" asp-route-userId="@UserManager.GetUserId(User)">My Recipes</a>
-                    <a class="dropdown-item" href="#">Favourite recipes</a>
+                    <a class="dropdown-item" asp-controller="FavouriteRecipes" asp-action="GetFaveRecipes" asp-route-userId="@UserManager.GetUserId(User)">Favourite recipes</a>
                     <div class="dropdown-divider"></div>
                     <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("IndexImage", "Recipes", new { area = "" })">
                         <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
