--- a/RecipeMVC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/RecipeMVC/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,13 +5,20 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+<br/>
+<div class="row" style="align-items:center">
+    <div class="col">
+        <h3>Use a local account to log in</h3>
+    </div>
+    <div class="col">
+        <img src="~/Images/log-in.png" style="float:right">
+    </div>
+</div>
+<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6" style="margin-left:300px">
         <section>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
@@ -31,51 +38,53 @@
                         </label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-secondary">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
+                <div class="row">
+                    <div class="form-group col">
+                        <p>
+                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        </p>
+                        <p>
+                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        </p>
+                    </div>
+                    <div class="form-group col">
+                        <button type="submit" class="btn btn-success" style="float:right">Log in</button>
+                    </div>
                 </div>
             </form>
         </section>
     </div>
-   <!-- <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-       -->
+    <!-- <div class="col-md-6 col-md-offset-2">
+         <section>
+             <h4>Use another service to log in.</h4>
+             <hr />
+             @{
+                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                 {
+                     <div>
+                         <p>
+                             There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                             for details on setting up this ASP.NET application to support logging in via external services.
+                         </p>
+                     </div>
+                 }
+                 else
+                 {
+                     <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                         <div>
+                             <p>
+                                 @foreach (var provider in Model.ExternalLogins)
+                                 {
+                                     <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                 }
+                             </p>
+                         </div>
+                     </form>
+                 }
+             }
+         </section>
+     </div>
+        -->
 </div>
 
 @section Scripts {
