--- a/RecipeMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeMVC/Views/Shared/_Layout.cshtml
@@ -7,12 +7,17 @@
     <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />-->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        .bg-primary,.navbar{
+            background-color:#9be4cf;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Recipes" asp-action="IndexImage"><img width="120" height="60" src="~/Images/pictrue.png" style="position:relative; margin-left:200px"></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Recipes" asp-action="IndexImage"><img width="150" height="60" src="~/Images/newLogo.png" style="position:relative; margin-left:200px;"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
