--- a/RecipeMVC/Views/Recipes/Create.cshtml
+++ b/RecipeMVC/Views/Recipes/Create.cshtml
@@ -92,7 +92,7 @@
                         <input type="submit" value="Add recipe" class="btn btn-outline-primary" style="float:right" />
                     </div>
                 </div>
-                <div class="form-group" hidden>
+                <div class="form-group">
                     <label asp-for="AppUserId" class="control-label">Author</label>
                     <input asp-for="AppUserId" class="form-control" value="@UserManager.GetUserId(User)"/>
                     <span asp-validation-for="AppUserId" class="text-danger"></span>
