--- a/RecipeMVC/Views/RecipeIngredients/Delete.cshtml
+++ b/RecipeMVC/Views/RecipeIngredients/Delete.cshtml
@@ -5,43 +5,59 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>RecipeIngredient</h4>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+<body>
+    <br />
+    <div class="row" style="align-items:center">
+        <div class="col">
+            <h3>Edit your ingredients</h3>
+        </div>
+        <div class="col">
+            <img src="~/Images/ingredients.png" style="float:right">
+        </div>
+    </div>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Amount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Amount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Measurement)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Measurement)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Recipe)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Recipe.Id)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ingredient)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ingredient.Id)
-        </dd class>
-    </dl>
-    
+    <div>
+        <dl class="row">
+            <dt class="col-sm-2">
+                Ingredient
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Ingredient.Name)
+            </dd>
+            <dt class="col-sm-2">
+                Brand
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Brand.Name)
+            </dd>
+            <dt class="col-sm-2">
+                Amount
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Amount)
+            </dd>
+            <dt class="col-sm-2">
+                Measurement
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Measurement)
+            </dd>
+        </dl>
+    </div>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="RecipeId" />
         <input type="hidden" asp-for="IngredientId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="hidden" asp-for="BrandId" />
+        <a asp-action="Index">Back</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
-</div>
+   
+</body>
+</html>
