--- a/RecipeMVC/Views/RecipeIngredients/IngredientBrandEdit.cshtml
+++ b/RecipeMVC/Views/RecipeIngredients/IngredientBrandEdit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RecipeModel.Models.RecipeIngredient
 @{
-    ViewData["Title"] = "IngredientBrandEdit";
+    ViewData["Title"] = "Edit ingredient";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -57,6 +57,8 @@
                     <input id="measurement" asp-for="Measurement" class="form-control" />
                     <span asp-validation-for="Measurement" class="text-danger"></span>
                 </div>
+                <br/>
+                <a class="btn btn-outline-secondary" asp-controller="RecipeIngredients" asp-action="IngredientsInRecipe" asp-route-recipeId="@Model.RecipeId">Back</a> | 
                 <button type="submit" class="btn btn-outline-success">Edit</button>
             </form>
         </div>
