--- a/RecipeMVC/Views/Home/Chat.cshtml
+++ b/RecipeMVC/Views/Home/Chat.cshtml
@@ -37,15 +37,8 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <ul id="messagesList">
-               <li>
-                    <div id="cardBoard" class="card border-secondary mb-3" style="max-width: 20rem;">
-                        <div class="card-header" id="header" style="font-weight:bold"></div>
-                        <div class="card-body">
-                            <p class="card-text" id="content"></p>
-                        </div>
-                    </div>
-                </li> 
+            <ul id="messagesList" style="list-style:none">
+               
             </ul>
         </div>
     </div>
